--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodeToDoServer",
+  "name": "angular-components-back",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,15 @@
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "eslint-config-airbnb-base": "^9.0.0",
+    "eslint-plugin-import": "^2.0.1",
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.8.1",
+    "nodemon": "^1.11.0"
   }
 }
